--- a/src/contextmenu.css
+++ b/src/contextmenu.css
@@ -4,7 +4,7 @@
 	--menu-background-color: #fff;
 	--menu-box-shadow: 0 0 6px rgba(204, 204, 204, 0.25);
 	--menu-width: 180px;
-	--menu-font-family: Roboto, "Segoe UI", "Open Sans", "Helvetica Neue", sans-serif;
+	--menu-title-width: 100px;
 	--menu-font-color: #404040;
 	--menu-font-size: 0.9em;
 	--menu-hover-item-color: #b4e6ff;
@@ -38,7 +38,6 @@
 
 /* everything inside the context menu will have the same font family & color */
 .contextmenu * {
-	font-family: var(--menu-font-family, Roboto, "Segoe UI", "Open Sans", "Helvetica Neue", sans-serif);
 	color: var(--menu-font-color, #404040);
 }
 
@@ -80,7 +79,7 @@
 
 /* if the title is too long, we make it shorter */
 .contextmenu ul li .contextmenu-title {
-	width: 90px;
+	width: var(--menu-title-width, 100px);
 	text-overflow: ellipsis;
 	white-space: nowrap;
 	overflow: hidden;
@@ -131,6 +130,11 @@ to improve differentiation and readability for the user */
 	width: var(--menu-icon-width, 10px);
 	height: auto;
 	opacity: 0.5;
+	margin-right: 10px;
+}
+
+/* the fontawesome icon */
+.contextmenu i {
 	margin-right: 10px;
 }
 
